melhor css na parte de html

--- a/inst/book/assets/css/quarto-book.scss
+++ b/inst/book/assets/css/quarto-book.scss
@@ -11,3 +11,11 @@ p {
   text-align: justify;
   text-justify: inter-word;
 }
+
+#refs {
+  text-align: justify;
+}
+
+#refs > * {
+  margin: 10px 0;
+}
